[gd_scene load_steps=2 format=3 uid="uid://7t4x4vml8inv"]

[ext_resource type="Script" path="res://snake/snake_body.gd" id="1_x05nj"]

[node name="SnakeBody" type="Node2D"]
script = ExtResource("1_x05nj")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.94902, 0.941176, 0.898039, 1)
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[node name="LineNext" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, -48, 0)
width = 24.0
default_color = Color(0.94902, 0.941176, 0.898039, 1)

[node name="LinePrev" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 48, 0)
width = 24.0
default_color = Color(0.94902, 0.941176, 0.898039, 1)
